examples/datalog/18_advanced_patterns/128_lead_sim.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_lead
Knowledge graph 'test_lead' created.
Switched to knowledge graph: test_lead
> .kg use test_lead
Switched to knowledge graph: test_lead
> +data[(1, 100), (2, 150), (3, 120), (4, 180)].
Inserted 4 fact(s) into 'data'.
> +with_next(Id, Val, NextVal) :- data(Id, Val), data(NextId, NextVal), NextId = Id + 1.
Rule 'with_next' registered.
> ?- with_next(Id, Val, Next).
Script error: Query execution failed: Unsupported comparison: Variable("NextId") Equal Arithmetic(Binary { op: Add, left: Variable("Id"), right: Constant(1) })
